--- a/trabanho.html
+++ b/trabanho.html
@@ -48,6 +48,9 @@
                 </div>
                 <div class="column right">
                     <div class="text">Sou Daniel <span class="typing-2"></span></div>
+                    Perfil: Desenvolvedor front-end. com foco em usabilidade e acessibilidade. 
+Habilidades em HTML, CSS, Java Script.qualificações como desenvolvedor 
+front-end.
                     <p>Superior de Tecnologia em Análise e Desenvolvimento de Sistemas<p>
                     Centro Universitário Maurício de Nassau - UNINASSAU!</p>
                     CURSOS COMPLEMENTARES 
